Replace Collectors.toList() with Stream.toList()
Use the more concise Stream.toList() method introduced in Java 16
instead of Collectors.toList() for better readability and slight
performance improvement.

Signed-off-by: Eunseo Song <162149585+eunseo9311@users.noreply.github.com>