@@ -22,7 +22,6 @@ import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import io.spring.initializr.generator.version.VersionParser;
@@ -65,8 +64,7 @@ public class DependenciesCapability extends ServiceCapability<List<DependencyGro
 	 * @return all dependencies
 	 */
 	public Collection<Dependency> getAll() {
-		return Collections
-			.unmodifiableCollection(this.indexedDependencies.values().stream().distinct().collect(Collectors.toList()));
+		return Collections.unmodifiableCollection(this.indexedDependencies.values().stream().distinct().toList());
 	}
 
 	public void validate() {
